--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Website in development !
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <!-- -->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Yossra Antari Portfolio</title>
+    <link rel="stylesheet" href="./style.css">
+    <!--<link rel="icon" href="./favicon.ico" type="image/x-icon">-->
+  </head>
+  <body>
+    <div id="header">
+        <div class="container">
+            <nav>
+                <img src="images/logo.png" class="logo">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Porfolio</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+
+            </nav>
+            <div class="header-text"></div>
+            <p>UI/UX Designer</p>
+            <h1>Hi,  I'm <span>Kevin</span><br>Jen from Australia</h1>
+        </div>
+
+
+    </div>
+    
+	<!--<script src="index.js"></script> -->
+  </body>
