--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
             </div>
         </div>
     </div>
-   <!-- <div class="copyright">
+    <div class="copyright">
         <p>Copyright © Kevin. Made wtih <i class="fas fa-heart"></i> by <a href="https://www.youtube.com/channel/UCkjoHfkLEy7ZT4bA2myJ8xA?sub_confirmation=1">Easy Tutorials</a></p>
-    </div>-->
+    </div>
 </div>
 
 
