--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     
                 </div>
                 
-                <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                <a href="images/yossra_antari_resume (1).pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
