del: contact form since google extension does not work

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 
                 <a href="images/yossra_antari_resume (1).pdf" download class="btn btn2">Download CV</a>
             </div>
-            <div class="contact-right">
+          <!--≈  <div class="contact-right">
                 <form name="submit-to-google-sheet">
                     <input type="text" name="Name" placeholder="Your Name" required>
                     <input type="email" name="Email" placeholder="Your Email" required>
@@ -160,7 +160,7 @@
                     <button type="submit" class="btn btn2">Submit</button>
                 </form>
                 <span id="msg"></span>
-            </div>
+            </div> -->
         </div>
     </div>
     <!--<div class="copyright">
@@ -201,7 +201,7 @@
 
 </script>
 <script>
-    const scriptURL = '< add you own link here >' // add your own app script link here
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbziJeIfjsLYD3x8vA8ms1PWvOJBf0N-szRbzKBE2WVASVXJD2UZwSRkW_d5OBiA58wh/exec'
     const form = document.forms['submit-to-google-sheet']
     const msg = document.getElementById("msg")
   
