--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <div id="header">
     <div class="container">
         <nav>
-            <img src="images/logo-v1.png" class="logo">
+            <h2 class="logo"><span>Y</span>ossra.</h2>
+            <!--<img src="images/logo-v1.png" class="logo"> -->
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
