project: update image and html

--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
 <!-- ----------portfolio------------ -->
 <div id="portfolio">
     <div class="container">
-        <h1 class="sub-title">My Work</h1>
+        <h1 class="sub-title">My Projects</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/project-1.jpg" width="650" height="750">
+                <img src="images/IMG_2849.jpg" width="650" height="750">
                 <div class="layer">
                     <h3>Portfolio</h3>
                     <p>Website used as portfolio hosted on GitHub Pages and built in HTML/CSS.</p>
