main: changing core description

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>Greetings! I'm Yossra, an aspiring product manager with a <br> Master's degree in Data Science. Currently an IT Strategy  <br>Consultant at Deloitte, I'm currently pursuing a certificate <br>in "Becoming a Product Manager" to thrive in this new position.
+                <p>Greetings! I'm Yossra, an aspiring product manager with a <br> Master's degree in Data Science. I am an IT Strategy  <br>Consultant at Deloitte with three years of experience, <br>I'm currently pursuing a certificate in "Becoming a Product Manager" <br>to thrive in this new position.
                     <br><br> Outside the professional sphere, I volunteer as a mentor at JobIRL <br>and as a board member at EPITA ALUMNII. <br> I find joy in martial arts, video editing, and contributing to voluntary initiatives.
                     
                     <br> <br> Whether it's about data science, collaboration, or new opportunities, <br>let's connect and explore the possibilities together!</p>
