--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
-               <!-- <li><a href="#services">Services</a></li>-->
+               <li><a href="#services">Skills</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <i class="fas fa-times" onclick="closemenu()"></i>
@@ -39,24 +39,24 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>Greetings! I'm Yossra, an aspiring product manager with a <br> Master's degree in Data Science. I am an IT Strategy  <br>Consultant at Deloitte with three years of experience, <br>I'm currently pursuing a certificate in "Becoming a Product Manager" <br>to thrive in this new position.
-                    <br><br> Outside the professional sphere, I volunteer as a mentor at JobIRL <br>and as a board member at EPITA ALUMNII. <br> I find joy in martial arts, video editing, and contributing to voluntary initiatives.
+                <p>Greetings! I'm Yossra, an aspiring Product Manager with a <br> Master's degree in Computer Science. Former IT Strategy  <br>Consultant at Deloitte with three years of experience, <br>I'm currently pursuing a certificate in "Becoming a Product Manager" <br>to thrive in this new position.
+                    <br>
                     
-                    <br> <br> Whether it's about data science, collaboration, or new opportunities, <br>let's connect and explore the possibilities together!</p>
+                    <br> Whether it's about data science, collaboration, or new opportunities, <br>let's connect and explore the possibilities together!</p>
 
                 <div class="tab-titles">
-                    <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                    <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                    <!--<p class="tab-links active-link" onclick="opentab('skills')">Skills</p>-->
+                    <p class="tab-links active-link" onclick="opentab('experience')">Experience</p>
                     <p class="tab-links" onclick="opentab('education')">Education</p>
                 </div>
-                <div class="tab-contents active-tab" id="skills">
+                <!--<div class="tab-contents active-tab" id="skills">
                     <ul>
                         <li><span>Programming</span><br>Python, SQL, Django</li>
                         <li><span>Product Management</span><br>Stakeholder management, User-Centric approach, Product Strategy</li>
                         <li><span>Soft Skills</span><br>Team player, Communication, Continuous Learner</li>
                     </ul>
-                </div>
-                <div class="tab-contents" id="experience">
+                </div>-->
+                <div class="tab-contents active-tab" id="experience">
                     <ul>
                         <li><span>2021 - Current</span><br>IT Strategy Consultant at Deloitte</li>
                         <li><span>2019 - 2020</span><br>Data Scientist R&D at Société Générale (internship).</li>
@@ -75,32 +75,31 @@
         </div>
     </div>
 </div>
-<!-- ---------services---------------- 
+<!-- ---------services---------------- -->
 <div id="services">
     <div class="container">
-        <h1 class="sub-title">My Services</h1>
+        <h1 class="sub-title">Skills</h1>
         <div class="services-list">
             <div>
-                <i class="fas fa-code"></i>
-                <h2>Web Design</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla nibh, tincidunt sit amet sapien quis.</p>
-                <a href="#">Learn more</a>
+                <i class="fa-solid fa-timeline"></i> <h2>Product Strategy</h2>
+                <p>Roadmapping,  A/B Tests, Project Management</p>
+                <!--<a href="#">Learn more</a>-->
             </div>
             <div>
-                <i class="fas fa-crop-alt"></i>
-                <h2>UI/UX Design</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla nibh, tincidunt sit amet sapien quis.</p>
-                <a href="#">Learn more</a>
+                <i class="fa-solid fa-pen-ruler"></i>
+                <h2>Product Design</h2>
+                <p>User Stories, Market Analysis, UX Design</p>
+                <!--<a href="#">Learn more</a>-->
             </div>
             <div>
-                <i class="fab fa-app-store"></i>
-                <h2>App Design</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla nibh, tincidunt sit amet sapien quis.</p>
-                <a href="#">Learn more</a>
+                <i class="fa-solid fa-code"></i>
+                <h2>Analytics & Programming </h2>
+                <p>Software Development and Management.</p>
+                <!-- <a href="#">Learn more</a> -->
             </div>
         </div>
     </div>
-</div> -->
+</div> 
 <!-- ----------portfolio------------ -->
 <div id="portfolio">
     <div class="container">
